# Pattern-Recognition-Computer-Vision

PRCV FINAL PROJECT/: Readme.md
Project 2/Baseline_Matching/: CMakeLists.txt  main.cpp
Project 2/Baseline_Matching/Header file/: baseline.cpp  write_features.cpp
Project 2/Baseline_Matching/results/: README.md  Readme.txt
Project 2/Color and Texture based Matching/: main.cpp
Project 2/DNN Embeddings/: CMakeLists.txt  task5.cpp
Project 2/Extensions/: Blue_trash_bins.cpp
Project 2/Fourier_extension/: fourier.cpp
Project 2/Histogram_Matching/: HIstorgram logic.txt  main.cpp
Project 2/Multi Histogram Matching/: CMakeLists.txt  main.cpp
Project 2/Multi Histogram Matching/results/: README.md
Project 2/Task7/: laws_filter.cpp
Project 2/final/: README.md  readme.md  task7.cpp
Project 2/laws_extension/: CMakeLists.txt  laws_filter.cpp
Project 3/FINAL/: Object_recognition.cpp  README.md  object_data.csv
Project 3/task 6/: task6withoutext.cpp  txt
Project 3/task 7/: task 7.cpp
Project 3/task1/: Task1.cpp  Task1old.cpp
Project 4/3) Calculate_Current_Position/: camera_calibration.yml  main.cpp
Project 4/Calculate_Current_Position/: main.cpp
Project 4/Detect_Extract_Target_Corners_store_calibration_image/: main.cpp  readme.md
Project 4/camera_calibration/: main.cpp
Project 4/final /: 1-3 task.cpp  4-6 tasks.cpp  7 task.cpp  readme.md
Project 5/final/: mnist_model.pth  readme.md  task1_main.py  task1_main2.py  task3 along extension.py
extra credit/: readme.md
project 1/11 Brightness and contrast/: B&Cfilter.cpp  main.cpp
(+32 files in other folders)
